# stormos

./: LICENSE  README.md  StormOS_SR_v4.6_hybrid_public  aur-packages.txt  git_clean.sh  git_push.sh  git_setup.sh  stormos.sh  update.sh  xfce-install.sh
programs from seeker/: StormOS_Expenses_Calculator  bmqt  journal3rec  multitranslatetest  pcal  ptimer  sdm  sfix  shlst  smp  stormy  stubet  welcome
stormos-installer/: PKGBUILD  abif  abif.desktop
x86_64/: 7-zip-24.06-4-x86_64.pkg.tar.zst  7-zip-24.09-1-x86_64.pkg.tar.zst  AcreetionOS-XFCE-conf-5.1-1-any.pkg.tar.zst  StormOS-conf-5.1-1-any.pkg.tar.zst  StormOS-conf-5.1.1-1-any.pkg.tar.zst  StormOS-conf-5.1.2-1-any.pkg.tar.zst  StormOS-conf-5.1.3-1-any.pkg.tar.zst  ]  abif-master-2.7-2-any.pkg.tar.zst  acreetionos-xfce-desktop-configs-2-2-any.pkg.tar.zst  acreetionos-xfce-desktop-configs-3-3-any.pkg.tar.zst  adw-gtk3-5.2-1-any.pkg.tar.zst  (+454 more)
x86_64/gksu/src/gksu-2.0.2/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
x86_64/gksu/src/gksu-2.0.2/gksu/: Makefile  Makefile.in  gksu  gksu.c
x86_64/gksu/src/gksu-2.0.2/gksu/.deps/: gksu.Po
x86_64/gksu/src/gksu-2.0.2/man/: Makefile  Makefile.in
x86_64/gksu/src/gksu-2.0.2/nautilus-gksu/: Makefile  Makefile.am  Makefile.in  libnautilus-gksu.c
x86_64/gksu/src/gksu-2.0.2/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  es.po  fr.po  gl.po  hu.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  th.po  xh.po  zh_CN.po
(+5 files in other folders)
